recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:3: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward(100);left();forward(100);left();forward(100);left()
                 ^FourSquare:3: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward(100);left();forward(100);left();forward(100);left()
                                     ^FourSquare:3: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
    forward(100);left();forward(100);left();forward(100);left()
                                                         ^FourSquare:5: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  square();left();square();left();square();left()
           ^FourSquare:5: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  square();left();square();left();square();left()
                           ^FourSquare:5: error: overloaded method value left with alternatives:
  (x$1: Int)Unit <and>
  (x$1: Double)Unit
 cannot be applied to ()
  square();left();square();left();square();left()
                                           ^